plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0-M2'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'org.example'
version = 'unspecified'
sourceCompatibility = '17'

jar {
    enabled = true
    archiveClassifier = '' //use empty string
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    maven{ url 'https://maven.aliyun.com/repository/central' }
    maven{ url 'https://maven.aliyun.com/repository/public' }
    maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
    implementation 'cn.hutool:hutool-core:5.8.16'
    implementation 'org.hibernate:hibernate-validator:8.0.0.Final'
    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
    implementation 'cn.dev33:sa-token-spring-boot3-starter:1.34.0'
    implementation 'cn.dev33:sa-token-dao-redis-jackson:1.34.0'
    implementation 'org.apache.commons:commons-pool2'
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    implementation 'org.redisson:redisson-spring-boot-starter:3.20.1'
    implementation 'com.zendesk:mysql-binlog-connector-java:0.28.0'
    implementation 'org.aspectj:aspectjweaver:1.9.19'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
}

test {
    useJUnitPlatform()
}
